examples/test/testpolicy84.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy84
  namespace: namespace240
spec:
  podSelector:
    matchLabels:
      key6: value42
      key39: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value19
      podSelector:
        matchLabels:
          key12: value12
          key26: value3
